# ConsoleGame

./: CMakeLists.txt
header/: CombatManager.h  ExplorationManager.h  InputSelection.h  LootingManager.h  OptionsManager.h  Player.h  includes.h  terminal.h
header/ManagerHeaders/: LootingManager.h  OptionsManager.h
resources/: loot.csv
src/: InputSelection.cpp  Player.cpp  terminal.cpp
src/managers/: CombatManager.cpp  ExplorationManager.cpp  LootingManager.cpp  OptionsManager.cpp
